2011-02-16 Németh László <nemeth at numbertext dot org>:
        * src/*/Makefile.am: fix library versioning, the probem reported by
          Rene Engerhald and Simon Brouwer.

	* man/hunspell.4: new version based on the revised version of Ruud Baars

2011-02-02 Németh László <nemeth at OOo>:
	* suggestngr.cxx: fix ngram PHONE suggestion for input words with
	  diacritics using UTF-8 encoded dictionaries (add byte length to the
	  8-bit phonet() argument instead of character length)

	* suggestmgr.cxx: fix missing csconv problem with UTF-8 encoding
	  dictionares, when the input contains non-BMP characters
	- tests/utf8_nonbmp.sug: test file

	* suggestmgr.cxx: mixed and keyboard based character suggestions
	  don't forbid ngram suggestion search (optimized tests/suggestiontest)

	* affixmgr.cxx: fix hun#2999225: interfering compounding mechanisms,
	  tested on Dutch word list and reported by Ruud Baars

	* affixmgr.cxx: allomorph fix for hun#2970240 (Hungarian 
	  compound "vadász+gép" was analyzed as vad+ász+gép, and rejected
	  by the ss->s rep rule (verb "vadássz"), but the analysis
	  didn't continue for the longer word parts (vadász+gép).

	* csutil.cxx: add lang code "az_AZ", "hu_HU", "tr_TR" for back
	  compatibility (fixing Azeri and Turkish casing conversion, also
	  Hungarian compound handling)

	* affixmgr.cxx: fix morphological analysis

2011-01-26 Németh László <nemeth at OOo>:
	* affixmgr.cxx: fix for moz#626195 (memcheck problem with FULLSTRIP).

	* affixmgr.*, suggestmgr.cxx: FORBIDWARN parameter (see manual)

2011-01-24 Németh László <nemeth at OOo>:
	* suffixmgr.cxx: fix bad suggestion of forbidden compound words, eg. 
	  "termijndoel" with the Dutch dictionary. Reported by Ruud Baars.

	* latexparser.cxx: fix double apostrophe TeX quoation mark tokenization
	  (hun#3119776), reported by Wybodekker at SF.net.

	* tests/suggestiontest/*: multilanguage and single Hunspell version, see README