@@ -431,6 +431,8 @@ suffixes are allowed at the end of compounds by default.
 Affixes with COMPOUNDPERMITFLAG may be inside of compounds.
 .IP "COMPOUNDFORBIDFLAG flag"
 Suffixes with this flag forbid compounding of the affixed word.
+.IP "COMPOUNDMORESUFFIXES"
+Allow twofold suffixes within compounds.
 .IP "COMPOUNDROOT flag"
 COMPOUNDROOT flag signs the compounds in the dictionary
 (Now it is used only in the Hungarian language specific code).
